<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/greenbg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="50dp"
        android:text="@string/create_acct_string"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:hint="@string/username_string"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:hint="@string/email_string"
        android:inputType="textEmailAddress"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/pword"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:hint="@string/new_pass_string"
        android:inputType="textPassword"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:hint="@string/confirm_pass_string"
        android:inputType="textPassword"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:background="@drawable/selector_register"
        android:text="@string/register_string"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/register_error"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:textColor="#000000" />

</LinearLayout>