<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/greenbg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_dud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/roomie_turn_string"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:hint="@string/email_string"
        android:inputType="textEmailAddress"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/pword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:background="@drawable/selector_login"
        android:text="@string/login_string"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin" >

        <TextView
            android:id="@+id/registerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_forgot_pass"
            android:text="@string/create_acct_string"
            android:textColor="#000000"
            android:textSize="15sp"
            android:clickable="true"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/passres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_forgot_pass"
            android:clickable="true"
            android:text="@string/forgot_password_string"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/loginErrorMsg"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="House menu" />

</LinearLayout>