<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/greenbg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_dud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/join_house_string"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/houseName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:hint="@string/house_code_string"
        android:inputType="textEmailAddress"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/housePass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:hint="@string/house_pass_string"
        android:inputType="textPassword"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/join"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:background="@drawable/selector_login"
        android:text="@string/join_string"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/loginErrorMsg"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/item_vert_margin"
        android:layout_marginLeft="@dimen/item_horz_margin"
        android:layout_marginRight="@dimen/item_horz_margin"
        android:layout_marginTop="@dimen/item_vert_margin"
        android:textColor="#000000" />

</LinearLayout>