<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="@dimen/item_vert_margin"
    android:layout_marginLeft="@dimen/item_horz_margin"
    android:layout_marginRight="@dimen/item_horz_margin"
    android:layout_marginTop="@dimen/item_vert_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/change_password_string"
        android:textColor="#000000"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/oldpass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="Old Password"
        android:password="true"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/newpass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="New Password"
        android:password="true"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/confirmpass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="Confirm Password"
        android:password="true"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btchangepass"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshape_confirm"
            android:shadowColor="#0A0FA8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/confirm_string"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btcancel"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:background="@drawable/buttonshape_back2login"
            android:shadowColor="#0A0FA8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/cancel_string"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/alertpass"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:textColor="#000000" />

</LinearLayout>